CMS-136: Fix and adjust spacings in the application

--- a/frontend/src/app/shared/components/button-container/button-container.component.scss
+++ b/frontend/src/app/shared/components/button-container/button-container.component.scss
@@ -3,5 +3,6 @@
 :host {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    justify-content: center;
+    align-items: center;
 }
