--- a/frontend/src/styles/component-styles/_login-register.scss
+++ b/frontend/src/styles/component-styles/_login-register.scss
@@ -24,7 +24,7 @@
             width: 100%;
             margin-bottom: 10px;
 
-            .field_input {
+            .field-input {
                 width: 100%;
             }
 
@@ -43,6 +43,10 @@
             color: $red;
             margin-top: 5px;
         }
+
+        &__submit {
+            margin-top: $large-spacing;
+        }
     }
 
     &__bottom {
@@ -58,7 +62,7 @@
         &-link {
             a {
                 text-decoration: none;
-                color: $purple-dark;
+                color: $dark-btn-back;
                 font-weight: $bold-weight;
             }
         }
